# CrossBreed

./: .gitignore  Cargo.toml  main.c  readme.md
Blender/: BuffSoldier.blend  BuffSoldier.blend1
MakeHumanFiles/: BuffSoldier.mhm  BuffSoldier.mtl  BuffSoldier.thumb
client/: Cargo.toml
client/src/: main.rs
clients/application/: Cargo.toml
concept_art/: download.jfif  images.jfif
include/: std.h  window.c  window.h
server/navigation/: Cargo.toml
server/navigation/src/: main.rs
src/: main.rs
src/assets/: chr_sword.vox  monkey.dae
src/cb_audio/: fm_synthesis.rs  mod.rs
src/cb_audio/fm_operator/: amplifier.rs  mod.rs  oscillator.rs
src/cb_cmd_line/: mod.rs
src/cb_data_structures/: mod.rs
src/cb_graphics/: mod.rs  render_gl.rs
src/cb_graphics/cb_collada/: mod.rs
src/cb_graphics/mesh/: greedy_mesher.rs  mod.rs  voxel_mesher.rs
src/cb_graphics/open_gl_backend/: mesh.frag  mesh.vert  mod.rs  r_collada_render.rs  r_voxel_meshes.rs  r_voxel_render.rs  render_gl.rs  triangle.vert
src/cb_graphics/sprites/: mod.rs
src/cb_graphics/systems/: mod.rs  sprite_render_system.rs
src/cb_input/: cb_input.rs  mod.rs
src/cb_input/contexts/: fighting_context.rs  mod.rs  rts_context.rs  shooter_context.rs  voxel_editor_context.rs
src/cb_input/input_type/: mod.rs
src/cb_inverse_kinematics/: mod.rs
src/cb_math/: cb_range.rs  mod.rs
src/cb_menu/: cb_button.rs  cb_button_toggle.rs  cb_form.rs  cb_form_column.rs  cb_form_row.rs  cb_slider_horizontal.rs  form.rs  gfx.rs  menu_events.rs  mod.rs
src/cb_menu/forms/: cb_button.rs  cb_button_toggle.rs  cb_form.rs  cb_form_column.rs  cb_form_row.rs  cb_label.rs  cb_slider_horizontal.rs  mod.rs
src/cb_patterns/: command.rs  controller.rs  mod.rs  presenter.rs
src/cb_simulation/: fight_game_fsm.rs  mod.rs  world_builder.rs
src/cb_simulation/assemblages/: mod.rs  (+4 more)
src/cb_system/: mod.rs
src/cb_utility/: mod.rs
src/cb_voxels/: greedy_mesher.rs  mod.rs
src/contexts/: mod.rs
src/external_libs/: mod.rs
src/simulation/: mod.rs
tooling/voxel-editor/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
(+29 files in other folders)
