[package]
name = "cross_breed"
version = "0.1.0"
description = "CrossBreed is a multiplayer, tactical, RTS-like. "
authors = ["Eric Olson <eric.rob.olson@gmail.com>"]
edition = "2018"

[dependencies]
gl = "0.14.0"
rmercury = { git = "https://github.com/ericrobolson/RMercury", branch="master" }
specs = "0.16.1"

[dependencies.sdl2]
version = "0.33.0"
features = ["bundled"]


[features]
specs_ecs = [] # TODO: add in specs as a dependency in case there's platform specific compile errors

default = ["specs_ecs"]