#// Copyright 2020, Eric Olson, All rights reserved. Contact eric.rob.olson@gmail.com for questions regarding use.

[package]
name = "cross_breed"
version = "0.1.0"
description = "CrossBreed is a multiplayer, tactical, RTS-like. "
authors = ["Eric Olson <eric.rob.olson@gmail.com>"]
edition = "2018"

[dependencies]
gl = "0.14.0"
specs = "0.16.1"
rmercury = { git = "https://github.com/ericrobolson/RMercury", branch="master" }
nalgebra = "0.20.0"
rayon = "1.3.0"
time = "0.2.9"
collada = "0.12.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
fixed = "0.5.4"


[profile.dev]
panic = "abort"


[dependencies.sdl2]
version = "0.33.0"
features = ["bundled"]


[features]
specs_ecs = [] # TODO: add in specs as a dependency in case there's platform specific compile errors

default = ["specs_ecs"]