[package]
name = "navigation"
version = "0.1.0"
authors = ["Eric Olson <eric.rob.olson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nickel = "0.11.0"
serde = "1.0.104"
serde_json = "1.0.46"
serde_derive = "1.0.104"

